--- a/organizador.html
+++ b/organizador.html
@@ -72,7 +72,7 @@
             <!-- Nav-Links -->
             <ul class="navbar-nav">
               <li class="nav-item mx-2">
-                <a class="nav-link" href="./index.html">Inicio</a>
+                <a class="nav-link" href="./organizador.html">Inicio</a>
               </li>
               <li class="nav-item mx-2">
                 <a class="nav-link" href="#">Acerca de [WiP]</a>
@@ -204,7 +204,7 @@
                       <li>
                         <img
                           class="carpetaIcon"
-                          src="./css/imágenes/folder-svgrepo-com.png"
+                          src="./imágenes/folder-svgrepo-com.png"
                           alt="carpeta"
                           width="25"
                           height="25"
