arreglos imagenes de iconos

--- a/organizador.html
+++ b/organizador.html
@@ -204,7 +204,7 @@
                       <li>
                         <img
                           class="carpetaIcon"
-                          src="./css/imágenes/folder-svgrepo-com.png"
+                          src="./imágenes/folder-svgrepo-com.png"
                           alt="carpeta"
                           width="25"
                           height="25"
@@ -215,7 +215,7 @@
                       <li>
                         <img
                           class="carpetaIcon"
-                          src="./css/imágenes/folder-svgrepo-com.png"
+                          src="./imágenes/folder-svgrepo-com.png"
                           alt="carpeta"
                           width="25"
                           height="25"
@@ -226,7 +226,7 @@
                       <li>
                         <img
                           class="carpetaIcon"
-                          src="./css/imágenes/folder-svgrepo-com.png"
+                          src="./imágenes/folder-svgrepo-com.png"
                           alt="carpeta"
                           width="25"
                           height="25"
@@ -370,7 +370,7 @@
             <img
               width="25"
               height="25"
-              src="./css/imágenes/close-bold-svgrepo-com.png"
+              src="./imágenes/close-bold-svgrepo-com.png"
               alt="close"
             />
           </button>
