--- a/organizador.html
+++ b/organizador.html
@@ -51,8 +51,7 @@
                     </g>
                   </g>
                 </g>
-              </g></svg
-          ></a>
+              </g></svg></a>
           <!-- Navbar Toggler -->
           <button
             class="navbar-toggler"
@@ -106,7 +105,7 @@
                           <img
                             width="25"
                             height="25"
-                            src="./css/imágenes/close-bold-svgrepo-com.png"
+                            src="./imágenes/close-bold-svgrepo-com.png"
                             alt="close"
                           />
                         </button>
@@ -136,6 +135,11 @@
                   </div>
                 </div>
               </li>
+
+              <li class="nav-item mx-2">
+                <a class="nav-link" href="#">Información [WiP]</a>
+              </li>
+
               <li class="nav-item mx-2 py-2">
                 <button
                   id="campanita"
@@ -215,7 +219,7 @@
                       <li>
                         <img
                           class="carpetaIcon"
-                          src="./css/imágenes/folder-svgrepo-com.png"
+                          src="./imágenes/folder-svgrepo-com.png"
                           alt="carpeta"
                           width="25"
                           height="25"
@@ -226,7 +230,7 @@
                       <li>
                         <img
                           class="carpetaIcon"
-                          src="./css/imágenes/folder-svgrepo-com.png"
+                          src="./imágenes/folder-svgrepo-com.png"
                           alt="carpeta"
                           width="25"
                           height="25"
@@ -370,7 +374,7 @@
             <img
               width="25"
               height="25"
-              src="./css/imágenes/close-bold-svgrepo-com.png"
+              src="./imágenes/close-bold-svgrepo-com.png"
               alt="close"
             />
           </button>
