--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         </div>
       </div>
     </main>
+    <a href="./organizador.html">Ir al organizador</a>
     <script src="./js/santiscript.js"></script>
   </body>
 </html>
