--- a/organizador.html
+++ b/organizador.html
@@ -136,6 +136,11 @@
                   </div>
                 </div>
               </li>
+
+              <li class="nav-item mx-2">
+                <a class="nav-link" href="#">Información [WiP]</a>
+              </li>
+
               <li class="nav-item mx-2 py-2">
                 <button
                   id="campanita"
