--- a/organizador.html
+++ b/organizador.html
@@ -10,14 +10,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?fasmily=Alegreya:ital,wght@1,500&family=Space+Mono&display=wap"
+      href="https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@1,500&family=Space+Mono&display=swap"
       rel="stylesheet"
     />
   </head>
 
   <body>
     <div class="container-fluid min-vh-100 d-flex flex-column p-0">
-      dsjdisdisjdisajdijd
       <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
           <a class="navbar-brand" href="#"
