cambio de nombres de variables

--- a/organizador.html
+++ b/organizador.html
@@ -249,11 +249,11 @@
         <div class="col col-lg-5">
           <section id="tareas-section">
             <h1 class="headers mb-3 mt-5">Organizador de Tareas</h1>
-            <form id="new-task-form" class="fondo">
+            <form id="formTareas" class="fondo">
               <input
                 type="text"
                 name="new-task-input"
-                id="new-task-input"
+                id="inputTareas"
                 placeholder="Escribí acá tus tareas"
                 required
               />
@@ -268,8 +268,8 @@
               <div class="task-list p-2">
                 <h2 class="mt-3">Lista de tus tareas</h2>
 
-                <div id="tasks">
-                  <!-- <div class="task">
+                <div id="tareas">
+                  <!-- <div class="tarea">
                                       <div class="content">
                                           <input 
                                               type="text" 
