--- a/organizador.html
+++ b/organizador.html
@@ -106,7 +106,7 @@
                           <img
                             width="25"
                             height="25"
-                            src="./css/imágenes/close-bold-svgrepo-com.png"
+                            src="./imágenes/close-bold-svgrepo-com.png"
                             alt="close"
                           />
                         </button>
