--- a/organizador.html
+++ b/organizador.html
@@ -20,9 +20,26 @@
       <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
           <a class="navbar-brand" href="#"
-            ><svg width="40" height="40" fill="#4c86aa" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512" xml:space="preserve" width="64px" height="64px" stroke="#4c86aa">
+            ><svg
+              width="40"
+              height="40"
+              fill="#4c86aa"
+              version="1.1"
+              id="Layer_1"
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              viewBox="0 0 512 512"
+              xml:space="preserve"
+              width="64px"
+              height="64px"
+              stroke="#4c86aa"
+            >
               <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-              <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+              <g
+                id="SVGRepo_tracerCarrier"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              ></g>
               <g id="SVGRepo_iconCarrier">
                 <g>
                   <g>
@@ -103,12 +120,7 @@
                           data-bs-dismiss="modal"
                           aria-label="Close"
                         >
-                          <img
-                            width="25"
-                            height="25"
-                            src="./imágenes/close-bold-svgrepo-com.png"
-                            alt="close"
-                          />
+                          <img width="25" height="25" src="./" alt="close" />
                         </button>
                       </div>
                       <div class="modal-body">
@@ -179,6 +191,7 @@
           </div>
         </div>
       </nav>
+
       <div class="row flex-grow-1 p-0 m-0">
         <div class="col col-lg pb-3">
           <section>
@@ -329,8 +342,7 @@
                                 <th>S</th>
                               </tr>
                             </thead>
-                            <tbody id="calendar-body">
-                            </tbody>
+                            <tbody id="calendar-body"></tbody>
                           </table>
                         </div>
                       </div>
