agregado de imagenes

--- a/organizador.html
+++ b/organizador.html
@@ -120,7 +120,7 @@
                           data-bs-dismiss="modal"
                           aria-label="Close"
                         >
-                          <img width="25" height="25" src="./" alt="close" />
+                          <img width="25" height="25" src="./imágenes/close-bold-svgrepo-com.png" alt="close" />
                         </button>
                       </div>
                       <div class="modal-body">
