--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h2>Iniciar sesión</h2>
             <input type="text" placeholder="Correo Electrónico" />
             <input type="password" placeholder="Contraseña" />
-            <button>Iniciar Sesión</button>
+            <button><a href="./organizador.html">Crear Cuenta</a></button>
           </form>
           <!-- Formulario de Registro -->
           <form action="" class="formulario_registro">
@@ -37,7 +37,7 @@
             <input type="text" placeholder="Correo Eleectronico" />
             <input type="text" placeholder="Usuario" />
             <input type="password" placeholder="Contraseña" />
-            <button>Crear Cuenta</button>
+            <button><a href="./organizador.html">Crear Cuenta</a></button>
           </form>
         </div>
       </div>
