--- a/organizador.html
+++ b/organizador.html
@@ -19,27 +19,9 @@
     <div class="container-fluid min-vh-100 d-flex flex-column p-0">
       <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
-          <a class="navbar-brand" href="#"
-            ><svg
-              width="40"
-              height="40"
-              fill="#4c86aa"
-              version="1.1"
-              id="Layer_1"
-              xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink"
-              viewBox="0 0 512 512"
-              xml:space="preserve"
-              width="64px"
-              height="64px"
-              stroke="#4c86aa"
-            >
+          <a class="navbar-brand" href="#"><svg width="40" height="40" fill="#4c86aa" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512" xml:space="preserve" width="64px" height="64px" stroke="#4c86aa">
               <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-              <g
-                id="SVGRepo_tracerCarrier"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              ></g>
+              <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
               <g id="SVGRepo_iconCarrier">
                 <g>
                   <g>
@@ -68,8 +50,7 @@
                     </g>
                   </g>
                 </g>
-              </g></svg
-          ></a>
+              </g></svg></a>
           <!-- Navbar Toggler -->
           <button
             class="navbar-toggler"
