--- a/organizador.html
+++ b/organizador.html
@@ -264,7 +264,7 @@
 
                 <div id="tareas">
                   <!-- <div class="tarea">
-                                      <div class="content">
+                                      <div class="contenido">
                                           <input 
                                               type="text" 
                                               class="text" 
@@ -300,7 +300,7 @@
                         aria-expanded="false"
                         aria-controls="flush-collapseCalendar"
                       >
-                        <h4>Calendario [WiP]</h4>
+                        <h4>Calendario</h4>
                       </button>
                     </div>
                     <div
