--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="./css/santicss.css" />
+    <link rel="stylesheet" href="./css/registro.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Inicio/registro</title>
@@ -28,7 +28,7 @@
             <h2>Iniciar sesión</h2>
             <input type="text" placeholder="Correo Electrónico" />
             <input type="password" placeholder="Contraseña" />
-            <button>Iniciar Sesión</button>
+            <button><a href="./organizador.html">Crear Cuenta</a></button>
           </form>
           <!-- Formulario de Registro -->
           <form action="" class="formulario_registro">
@@ -37,12 +37,11 @@
             <input type="text" placeholder="Correo Eleectronico" />
             <input type="text" placeholder="Usuario" />
             <input type="password" placeholder="Contraseña" />
-            <button>Crear Cuenta</button>
+            <button><a href="./organizador.html">Crear Cuenta</a></button>
           </form>
         </div>
       </div>
     </main>
-    <a href="./organizador.html">Ir al organizador</a>
     <script src="./js/santiscript.js"></script>
   </body>
 </html>
