--- a/organizador.html
+++ b/organizador.html
@@ -19,8 +19,7 @@
     <div class="container-fluid min-vh-100 d-flex flex-column p-0">
       <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
-          <a class="navbar-brand" href="#"
-            ><svg width="40" height="40" fill="#4c86aa" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512" xml:space="preserve" width="64px" height="64px" stroke="#4c86aa">
+          <a class="navbar-brand" href="#"><svg width="40" height="40" fill="#4c86aa" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512" xml:space="preserve" width="64px" height="64px" stroke="#4c86aa">
               <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
               <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
               <g id="SVGRepo_iconCarrier">
@@ -71,7 +70,7 @@
             <!-- Nav-Links -->
             <ul class="navbar-nav">
               <li class="nav-item mx-2">
-                <a class="nav-link" href="./organizador.html">Inicio</a>
+                <a class="nav-link" href="./index.html">Inicio</a>
               </li>
               <li class="nav-item mx-2">
                 <a class="nav-link" href="#">Acerca de [WiP]</a>
@@ -102,12 +101,7 @@
                           data-bs-dismiss="modal"
                           aria-label="Close"
                         >
-                          <img
-                            width="25"
-                            height="25"
-                            src="./imágenes/close-bold-svgrepo-com.png"
-                            alt="close"
-                          />
+                          <img width="25" height="25" src="./imágenes/close-bold-svgrepo-com.png" alt="close" />
                         </button>
                       </div>
                       <div class="modal-body">
@@ -178,6 +172,7 @@
           </div>
         </div>
       </nav>
+
       <div class="row flex-grow-1 p-0 m-0">
         <div class="col col-lg pb-3">
           <section>
@@ -248,11 +243,11 @@
         <div class="col col-lg-5">
           <section id="tareas-section">
             <h1 class="headers mb-3 mt-5">Organizador de Tareas</h1>
-            <form id="new-task-form" class="fondo">
+            <form id="formTareas" class="fondo">
               <input
                 type="text"
                 name="new-task-input"
-                id="new-task-input"
+                id="inputTareas"
                 placeholder="Escribí acá tus tareas"
                 required
               />
@@ -267,9 +262,9 @@
               <div class="task-list p-2">
                 <h2 class="mt-3">Lista de tus tareas</h2>
 
-                <div id="tasks">
-                  <!-- <div class="task">
-                                      <div class="content">
+                <div id="tareas">
+                  <!-- <div class="tarea">
+                                      <div class="contenido">
                                           <input 
                                               type="text" 
                                               class="text" 
@@ -305,7 +300,7 @@
                         aria-expanded="false"
                         aria-controls="flush-collapseCalendar"
                       >
-                        <h4>Calendario [WiP]</h4>
+                        <h4>Calendario</h4>
                       </button>
                     </div>
                     <div
@@ -328,9 +323,7 @@
                                 <th>S</th>
                               </tr>
                             </thead>
-                            <tbody id="calendar-body">
-                              <!-- Contenido del calendario -->
-                            </tbody>
+                            <tbody id="calendar-body"></tbody>
                           </table>
                         </div>
                       </div>
