--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h2>Iniciar sesión</h2>
             <input type="text" placeholder="Correo Electrónico" />
             <input type="password" placeholder="Contraseña" />
-            <button><a href="./organizador.html">Crear Cuenta</a></button>
+            <button><a href="./organizador.html">Iniciar sesión</a></button>
           </form>
           <!-- Formulario de Registro -->
           <form action="" class="formulario_registro">
