--- a/indexFaus.html
+++ b/indexFaus.html
@@ -171,14 +171,14 @@
   <section class="container">
     <div class="row">
       <div class="col">
-        <img src="imagen1.jpg" alt="Foto de portada de Persona 1">
+        <img src="img/Delfor.jpg" alt="Foto de portada de Persona 1">
         <h2>Delfor Vicondo</h2>
         <p>Descripción de Persona 1.</p>
       </div>
       <div class="col">
-        <img src="imagen2.jpg" alt="Foto de portada de Persona 2">
-        <h2>Santiago Sarrasúa</h2>
-        <p>Descripción de Persona 2.</p>
+        <img src="img/Santi.jpg" alt="Foto de portada de Persona 2">
+        <h2>Santiago Sarasúa</h2>
+        <p>Tengo 16 años y me gusta la programación, tocar guitarra y jugar basquet, desde chico siempre me interesó la programación y me gustó mucho este curso. Me interesan mucho los temas como la física general, la tecnología, la música y me gustaría poder algún día dedicarme a estos.</p>
       </div>
       <div class="col">
         <img src="imagen3.jpg" alt="Foto de portada de Persona 3">
@@ -186,14 +186,14 @@
         <p>Descripción de Persona 3.</p>
       </div>
       <div class="col">
-        <img src="imagen4.jpg" alt="Foto de portada de Persona 4">
+        <img src="img/Mica.jpg" alt="Foto de portada de Persona 4">
         <h2>Micaela Lugo</h2>
-        <p>Descripción de Persona 4.</p>
+        <p>Soy estudiante en Don Torcuato de 6to año economía</p>
       </div>
       <div class="col">
-        <img src="imagen5.jpg" alt="Foto de portada de Persona 5">
+        <img src="img/Faus.jpg" alt="Foto de portada de Persona 5">
         <h2>Faustina Grande</h2>
-        <p>Descripción de Persona 5.</p>
+        <p>17 años.<br>Actualmente cursando el último año en el Colegio Virgen del Pilar, La Plata.  Toco la Guitarra y me gusta leer. Gracias a Gen T descubrí una nueva pasión y estoy desarrollándola.</p>
       </div>
     </div>
   </section>
