<p>delfor indexFaus.html

--- a/indexFaus.html
+++ b/indexFaus.html
@@ -173,7 +173,7 @@
       <div class="col">
         <img src="img/Delfor.jpg" alt="Foto de portada de Persona 1">
         <h2>Delfor Vicondo</h2>
-        <p>Descripción de Persona 1.</p>
+        <p>18 años.<br>Me encuentro cursando el último año del Colegio Mariano Moreno de Florentino Ameghino. Soy fanático de la música y las películas. Estos últimos años descubrí que me encanta la programación y el diseño web, y gracias a la iniciativa de Generación T pude desarrollarme más en el tema.</p>
       </div>
       <div class="col">
         <img src="img/Santi.jpg" alt="Foto de portada de Persona 2">
