--- a/organizador.html
+++ b/organizador.html
@@ -19,57 +19,7 @@
     <div class="container-fluid min-vh-100 d-flex flex-column p-0">
       <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
-          <a class="navbar-brand" href="#"
-            ><svg
-              width="40"
-              height="40"
-              fill="#4c86aa"
-              version="1.1"
-              id="Layer_1"
-              xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink"
-              viewBox="0 0 512 512"
-              xml:space="preserve"
-              width="64px"
-              height="64px"
-              stroke="#4c86aa"
-            >
-              <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-              <g
-                id="SVGRepo_tracerCarrier"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              ></g>
-              <g id="SVGRepo_iconCarrier">
-                <g>
-                  <g>
-                    <g>
-                      <path
-                        d="M422.741,42.667h-60.07V32.491C362.671,14.543,348.128,0,330.18,0H181.828c-17.947,0-32.491,14.543-32.491,32.491v10.176 H89.259c-25.734,0-46.592,20.858-46.592,46.592v376.149c0,25.734,20.858,46.592,46.592,46.592h333.483 c25.734,0,46.592-20.858,46.592-46.592V89.259C469.333,63.525,448.475,42.667,422.741,42.667z M192.004,42.667H320v42.667 H192.004V42.667z M426.667,465.408c0,2.17-1.755,3.925-3.925,3.925H89.259c-2.17,0-3.925-1.755-3.925-3.925V89.259 c0-2.17,1.755-3.925,3.925-3.925h60.075v10.176c0,17.947,14.543,32.491,32.491,32.491h0.004h148.348h0.004 c17.947,0,32.491-14.543,32.491-32.491V85.333h60.07c2.17,0,3.925,1.755,3.925,3.925V465.408z"
-                      ></path>
-                      <rect
-                        x="128"
-                        y="192"
-                        width="85.333"
-                        height="85.333"
-                      ></rect>
-                      <rect
-                        x="128"
-                        y="341.333"
-                        width="85.333"
-                        height="85.333"
-                      ></rect>
-                      <path
-                        d="M347.582,176.915l-48.915,48.915l-6.248-6.248c-8.331-8.331-21.839-8.331-30.17,0c-8.331,8.331-8.331,21.839,0,30.17 l21.333,21.333c8.331,8.331,21.839,8.331,30.17,0l64-64c8.331-8.331,8.331-21.839,0-30.17 C369.42,168.584,355.913,168.584,347.582,176.915z"
-                      ></path>
-                      <path
-                        d="M347.582,326.248l-48.915,48.915l-6.248-6.248c-8.331-8.331-21.839-8.331-30.17,0c-8.331,8.331-8.331,21.839,0,30.17 l21.333,21.333c8.331,8.331,21.839,8.331,30.17,0l64-64c8.331-8.331,8.331-21.839,0-30.17 C369.42,317.917,355.913,317.917,347.582,326.248z"
-                      ></path>
-                    </g>
-                  </g>
-                </g>
-              </g></svg
-          ></a>
+          <img src="imágenes/logo.png" height="50">
           <!-- Navbar Toggler -->
           <button
             class="navbar-toggler"
@@ -293,9 +243,6 @@
 
           </section>
         </div>
-<img src="./imágenes/edit-2-svgrepo-com.png">
-<img src="./imágenes/trash-xmark-svgrepo-com.png">
-<img src="./imágenes/folder-svgrepo-com.png">
         <div class="col col-lg">
           <div class="row">
             <div class="col-lg">
