--- a/organizador.html
+++ b/organizador.html
@@ -169,7 +169,7 @@
                     aria-expanded="false"
                     aria-controls="flush-collapseCarpetas"
                   >
-                    <h4>Carpetas [WiP]</h4>
+                    <h4>Carpetas</h4>
                   </button>
                 </div>
                 <div
@@ -318,7 +318,7 @@
         <div class="offcanvas-header">
 
           <h5 class="offcanvas-title" id="notificationsOffcanvasLabel">
-            Notificaciones [WiP]
+            Notificaciones
           </h5>
 
           <button type="button" data-bs-dismiss="offcanvas" aria-label="Close">
