UltimasMejoras indexFaus.html

--- a/indexFaus.html
+++ b/indexFaus.html
@@ -6,7 +6,7 @@
   <title>Sobre Nosotros</title>
   <link rel="stylesheet" href="css/bootstrap.css" />
   <link rel="stylesheet" href="styleFaus.css"/>
-  <link rel="shortcut icon" href="" type="image/x-icon">
+  <link rel="shortcut icon" href="img/icono.jpg" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@1,500&family=Space+Mono&display=swap" rel="stylesheet"
@@ -172,28 +172,37 @@
     <div class="row">
       <div class="col">
         <img src="img/Delfor.jpg" alt="Foto de portada de Persona 1">
+        <br>
+        <br>
         <h2>Delfor Vicondo</h2>
-        <p>18 años.<br>Me encuentro cursando el último año del Colegio Mariano Moreno de Florentino Ameghino. Soy fanático de la música y las películas. Estos últimos años descubrí que me encanta la programación y el diseño web, y gracias a la iniciativa de Generación T pude desarrollarme más en el tema.</p>
+        <p>18 años<br>Me encuentro cursando el último año del Colegio Mariano Moreno de Florentino Ameghino. Soy fanático de la música y las películas. Estos últimos años descubrí que me encanta la programación y el diseño web, y gracias a la iniciativa de Generación T pude desarrollarme más en el tema.</p>
       </div>
       <div class="col">
         <img src="img/Santi.jpg" alt="Foto de portada de Persona 2">
+        <br>
         <h2>Santiago Sarasúa</h2>
-        <p>Tengo 16 años y me gusta la programación, tocar guitarra y jugar basquet, desde chico siempre me interesó la programación y me gustó mucho este curso. Me interesan mucho los temas como la física general, la tecnología, la música y me gustaría poder algún día dedicarme a estos.</p>
+        <p>16 años<br> Me gusta la programación, tocar guitarra y jugar basquet, desde chico siempre me interesó la programación y me gustó mucho este curso. Me interesan mucho los temas como la física general, la tecnología, la música y me gustaría poder algún día dedicarme a estos.</p>
       </div>
       <div class="col">
-        <img src="imagen3.jpg" alt="Foto de portada de Persona 3">
+        <img src="img/Aaron.jpg" alt="Foto de portada de Persona 3">
+        <br>
+        <br>
         <h2>AAron Fernandez</h2>
-        <p>Descripción de Persona 3.</p>
+        <p>18 años<br> Terminando el secundario en la Escuela de Educación Secundaria N°25 "La Chacra de Perdriel" Mar del Plata. Me gusta mucha la música y los juegos de computadora.</p>
       </div>
       <div class="col">
         <img src="img/Mica.jpg" alt="Foto de portada de Persona 4">
+        <br>
+        <br>
         <h2>Micaela Lugo</h2>
-        <p>Soy estudiante en Don Torcuato de 6to año economía</p>
+        <p>17 años<br>Soy estudiante en Don Torcuato de 6to año economía "Solana del Monte". En mi tiempo libre leo, hago voley, voy al gimnasio o practico programación. Proximamente voy a empezar un curso de italiano, ya que quiero irme a vivir allí.</p>
       </div>
       <div class="col">
         <img src="img/Faus.jpg" alt="Foto de portada de Persona 5">
+        <br>
+        <br>
         <h2>Faustina Grande</h2>
-        <p>17 años.<br>Actualmente cursando el último año en el Colegio Virgen del Pilar, La Plata.  Toco la Guitarra y me gusta leer. Gracias a Gen T descubrí una nueva pasión y estoy desarrollándola.</p>
+        <p>17 años<br>Actualmente cursando el último año en el Colegio Virgen del Pilar, La Plata.  Toco la Guitarra y me gusta leer. Gracias a Gen T descubrí una nueva pasión y estoy desarrollándola.</p>
       </div>
     </div>
   </section>
