apellidoChaste indexFaus.html

--- a/indexFaus.html
+++ b/indexFaus.html
@@ -187,7 +187,7 @@
         <img src="img/Aaron.jpg" alt="Foto de portada de Persona 3">
         <br>
         <br>
-        <h2>AAron Fernandez</h2>
+        <h2>AAron Chiastellino</h2>
         <p>18 años<br> Terminando el secundario en la Escuela de Educación Secundaria N°25 "La Chacra de Perdriel" Mar del Plata. Me gusta mucha la música y los juegos de computadora.</p>
       </div>
       <div class="col">
