--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <input type="password" id="contrasena" placeholder="Contraseña" name="contrasena" required minlength="8" pattern="^(?=.[a-z])(?=.[A-Z])(?=.\d)(?=.[@#$%^&+=!]).*$" 
                        title="La contraseña debe tener al menos 8 caracteres, incluyendo al menos una mayúscula, una minúscula, un número y un carácter especial (@#$%^&+=!)."/>
                     </div>
-            <img src="./logo/logo.png" alt="" id="logo">
+            <img src="./imagenes/logo.png" alt="" id="logo">
             <div id="descripcion" data-traduccion="conectate">¡CONÉCTATE!</div>
 
             <footer>
