--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./css/registro.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title data-traduccion="titulo">Inicio/registro</title>
@@ -60,6 +60,6 @@
     </main>
 
 
-    <script src="./script.js"></script>
+    <script src="./js/santiscript.js"></script>
 </body>
 </html> 
