--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <main>
-      <a href="organizador.html" style="position: absolute;top: 110px;color: white;font-size: 22px;font-size: 22; text-decoration: underline;">(Click para Vista Previa)</a>
+      <a href="organizador.html" style="position: absolute;top: 110px;color: white;font-size: 22px;font-size: 22; text-decoration: underline;">(Click acá para Vista Previa)</a>
         <div class="inicio_registro">
             <div class="apartado">
                 <div class="apartado-inicio">
