--- a/organizador.html
+++ b/organizador.html
@@ -39,7 +39,7 @@
             <!-- Nav-Links -->
             <ul class="navbar-nav">
               <li class="nav-item mx-2">
-                <a class="nav-link" href="acercade.html ">Acerca de</a>
+                <a class="nav-link" href="#">Acerca de [WiP]</a>
               </li>
 
                 <div
@@ -93,7 +93,7 @@
               </li>
 
               <li class="nav-item mx-2">
-                <a class="nav-link" href="info.html">Información</a>
+                <a class="nav-link" href="#">Información [WiP]</a>
               </li>
 
               <li class="nav-item mx-2">
