--- a/acercade.html
+++ b/acercade.html
@@ -28,7 +28,7 @@
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-          <span class="navbar-toggler-icon"></span>
+          <img src="./imágenes/menu-symbol-of-three-parallel-lines-svgrepo-com.png" height="25">
         </button>
         <div
           class="collapse navbar-collapse justify-content-end"
