--- a/info.html
+++ b/info.html
@@ -105,6 +105,11 @@
 <h5 class="h5">En función de los objetivos y preferencias del usuario, la aplicación puede enviar notificaciones personalizadas para motivar a los usuarios a mantener hábitos saludables.</h5>
           </div>
 <h3 class="eqn">¡Esperamos que nuestra aplicación web le sea de ayuda!</h3>
+            <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+      crossorigin="anonymous"
+    ></script>
        <script src="./js/script2.js"></script>
 </body>
 </html>
