--- a/acercade.html
+++ b/acercade.html
@@ -28,7 +28,7 @@
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-          <img src="./imágenes/menu-symbol-of-three-parallel-lines-svgrepo-com.png" height="25">
+          <img src="./imágenes/menu-symbol-of-three-parallel-lines-svgrepo-com.png" style="height: 25px; border-radius: 0;">
         </button>
         <div
           class="collapse navbar-collapse justify-content-end"
