--- a/acercade.html
+++ b/acercade.html
@@ -85,7 +85,7 @@
           <img src="./imágenes/Aaron.jpg" alt="Foto de portada de Persona 3" />
           <br />
           <br />
-          <h2>AAron Chiastellino</h2>
+          <h2>Aaron Chiastellino</h2>
           <p>
             18 años<br />
             Terminando el secundario en la Escuela de Educación Secundaria N°25
